--- a/portfolio.html
+++ b/portfolio.html
@@ -127,7 +127,7 @@
               class="image"
               width="370"
               height="294"
-              src="Images/Project LAB.jpg"
+              src="Images/ProjectLAB.jpg"
               alt="Project LAB images"
             />
             <h3 class="title-section">Project LAB</h3>
@@ -138,7 +138,7 @@
               class="image"
               width="370"
               height="294"
-              src="Images/Growing Business.jpg"
+              src="Images/GrowingBusiness.jpg"
               alt="working on  apps"
             />
             <h3 class="title-section">Growing Business</h3>
@@ -154,9 +154,7 @@
       <address>
         <ul class="intormation-contacts">
           <li>
-            <a href="695 Park Ave, NY 10065, USA"
-              >695 Park Ave, NY 10065, USA</a
-            >
+            <a href="695ParkAve,NY10065,USA">695 Park Ave, NY 10065, USA</a>
           </li>
           <li class="contact-data">
             <a href="mailtoinfo@devstudio.com">info@devstudio.com</a>
