--- a/index.html
+++ b/index.html
@@ -13,18 +13,25 @@
         <a class="logo" href="WebStudio">
           <span class="first-text">Web</span> Studio</a
         >
-        <ul class="navigation-list">
-          <li><a href="index.html" rel="Studio">Studio</a></li>
-          <li class="porfolio">
+        <ul class="header-list">
+          <li>
+            <a class="navigation-list" href="index.html" rel="Studio">Studio</a>
+          </li>
+          <li class="navigation-list">
             <a href="portfolio.html" rel="Portfolio">Portfolio</a>
           </li>
-
-          <li><a href="Contacts">Contacts</a></li>
+          <li><a class="navigation-list" href="Contacts">Contacts</a></li>
         </ul>
       </nav>
       <ul class="contacts-list">
-        <li><a href="mailtoinfo@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+12127724150">+1 212-772-4150</a></li>
+        <li>
+          <a class="contacts" href="mailtoinfo@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contacts" href="tel:+12127724150">+1 212-772-4150</a>
+        </li>
       </ul>
     </header>
     <main>
@@ -146,15 +153,17 @@
       <address>
         <ul class="intormation-contacts">
           <li>
-            <a href="695 Park Ave, NY 10065, USA"
+            <a class="address" href="695ParkAve,NY10065,USA"
               >695 Park Ave, NY 10065, USA</a
             >
           </li>
-          <li class="contact-data">
-            <a href="mailtoinfo@devstudio.com">info@devstudio.com</a>
+          <li>
+            <a class="contact-data" href="mailtoinfo@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="contact-data">
-            <a href="tel:+12127724150">+1 212-772-4150</a>
+          <li>
+            <a class="contact-data" href="tel:+12127724150">+1 212-772-4150</a>
           </li>
         </ul>
       </address>
