--- a/portfolio.html
+++ b/portfolio.html
@@ -19,28 +19,37 @@
         <a class="logo" href="WebStudio">
           <span class="first-text">Web</span> Studio</a
         >
-        <ul class="navigation-list">
-          <li><a href="index.html" rel="Studio">Studio</a></li>
-          <li class="porfolio">
-            <a href="portfolio.html" rel="Portfolio">Portfolio</a>
+        <ul class="header-list">
+          <li>
+            <a class="navigation-list" href="index.html" rel="Studio">Studio</a>
           </li>
-
-          <li><a href="Contacts">Contacts</a></li>
+          <li>
+            <a class="navigation-list" href="portfolio.html" rel="Portfolio"
+              >Portfolio</a
+            >
+          </li>
+          <li><a class="navigation-list" href="Contacts">Contacts</a></li>
         </ul>
       </nav>
       <ul class="contacts-list">
-        <li><a href="mailtoinfo@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+12127724150">+1 212-772-4150</a></li>
+        <li>
+          <a class="contacts" href="mailtoinfo@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contacts" href="tel:+12127724150">+1 212-772-4150</a>
+        </li>
       </ul>
     </header>
     <main>
       <section>
         <ul class="button-section">
-          <li><button class="button-all" type="button">All</button></li>
-          <li><button type="button">Web-sites</button></li>
-          <li><button type="button">Apps</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+          <li><button class="button" type="button">All</button></li>
+          <li><button class="button" type="button">Web-sites</button></li>
+          <li><button class="button" type="button">Apps</button></li>
+          <li><button class="button" type="button">Design</button></li>
+          <li><button class="button" type="button">Marketing</button></li>
         </ul>
       </section>
       <section class="images-section">
@@ -139,7 +148,7 @@
               width="370"
               height="294"
               src="Images/GrowingBusiness.jpg"
-              alt="working on  apps"
+              alt="working on apps"
             />
             <h3 class="title-section">Growing Business</h3>
             <p class="text-section">Apps</p>
@@ -154,13 +163,17 @@
       <address>
         <ul class="intormation-contacts">
           <li>
-            <a href="695ParkAve,NY10065,USA">695 Park Ave, NY 10065, USA</a>
+            <a class="address" href="695ParkAve,NY10065,USA"
+              >695 Park Ave, NY 10065, USA</a
+            >
           </li>
-          <li class="contact-data">
-            <a href="mailtoinfo@devstudio.com">info@devstudio.com</a>
+          <li>
+            <a class="contact-data" href="mailtoinfo@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="contact-data">
-            <a href="tel:+12127724150">+1 212-772-4150</a>
+          <li>
+            <a class="contact-data" href="tel:+12127724150">+1 212-772-4150</a>
           </li>
         </ul>
       </address>
